--- a/styles.css
+++ b/styles.css
@@ -1,51 +1,171 @@
-*{
-    font-family: 'Lato', sans-serif;
+* {
+  font-family: "Lato", sans-serif;
 }
 
-.header{
-    display: flex;
-    height: 80px;
-    padding: 19px;
-    justify-content: space-around;
+.header {
+  display: flex;
+  height: 80px;
+  padding: 19px;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.header__nav{
-    display: flex;
-    justify-content: space-around;
-    width: 384px;
+.header__nav {
+  display: flex;
+  justify-content: space-around;
+  width: 384px;
+  align-items: center;
+  font-weight: 700;
 }
 
 .header__nav-links a {
-    text-decoration: none;
-    color: black;
-    text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+  text-transform: uppercase;
 }
 
-.team{
-    background-color: #F6F6F6;
-    padding: 150px 10vw;
-    text-align: center;
+.header__nav-links:hover a{
+    color: #18b5dc;
+}
+.header__button {
+  padding: 10px 20px;
+  background-color: white;
+  width: 130px;
+  height: 42px;
+  border: 1px solid #3c3c3c;
+  text-transform: uppercase;
 }
 
-.team__list{
-    display: inline-flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.header__button:hover{
+    background-color: #18b5dc;
+    color: white;
+    border-color: #18b5dc;
 }
 
-.team__item{
-    margin: 15px;
+.team {
+  background-color: #f6f6f6;
+  padding: 150px 10vw;
+  text-align: center;
 }
 
-.footer{
+.team__title {
+  font-size: 36px;
+  text-transform: uppercase;
+}
+.team__decorationLine {
+  background-color: #dddbdb;
+  width: 45px;
+  height: 4px;
+  color: #dddbdb;
+  border: none;
+  margin: 20px auto;
+}
+.team__descriptionText {
+  font-size: 16px;
+  line-height: 24px;
+  color: #3c3c3ca6;
+  max-width: 570px;
+  margin: 20px auto;
+}
+
+.item-team__photo {
+  margin-bottom: 20px;
+}
+
+.item-team__name {
+  text-align: start;
+  font-size: 18px;
+  font-weight: 700;
+  color: #282528;
+}
+
+.item-team__profession {
+  color: #646464;
+  text-align: start;
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.team__list {
+  display: inline-flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.team__item {
+  margin: 15px;
+  position: relative;
+}
+
+.item-team__flipcard-face {
+  width: 270px;
+  height: 270px;
+  background: url("./img/elena.png") no-repeat;
+}
+
+
+
+.item-team__flipcard-blue {
+  
+  width: 270px;
+  height: 270px;
+  left: 0px;
+  top: 0px;
+  background: #18b5dc;
+  
+}
+
+.item-team__flipcard-blue-w-icons{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-
+    justify-content: space-between;
+    width: 50%;
+    margin: auto;
 }
 
-.footer__social-list{
-    display: flex;
-    justify-content: space-between;
-    width: 285px;
+.item-team__hover-card-w-icons > img {
+  color: white;
+}
+
+.item-team__photo-1:hover + .item-team__hover-card-w-icons {
+  visibility: visible;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-content: space-between;
+  width: 285px;
+  padding: 40px;
+}
+
+.footer__social-items{
+    border: 1px solid #18b5dc;
+    display: block;
+    height: 42px;
+    width: 42px;
+}
+
+.footer__logo{
+    margin-bottom: 25px;
+}
+
+.footer__social-items>svg{
+    display: block;
+    height: 20px;
+    margin: auto;
+    padding: 10px 0px;
+}
+
+.footer__social-items:hover path{
+    fill: white;
+}
+
+.footer__social-items:hover{
+    background-color: #18b5dc;
 }
