--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+#lily{
+    background-image: url('./img/lily.png');
+}
+#alex{
+    background-image: url('./img/alex.png');
+}
+#elena{
+    background-image: url('./img/elena.png');
+}
+
+
 * {
   font-family: "Lato", sans-serif;
 }
@@ -24,8 +35,8 @@
   text-transform: uppercase;
 }
 
-.header__nav-links:hover a{
-    color: #18b5dc;
+.header__nav-links:hover a {
+  color: #18b5dc;
 }
 .header__button {
   padding: 10px 20px;
@@ -36,10 +47,10 @@
   text-transform: uppercase;
 }
 
-.header__button:hover{
-    background-color: #18b5dc;
-    color: white;
-    border-color: #18b5dc;
+.header__button:hover {
+  background-color: #18b5dc;
+  color: white;
+  border-color: #18b5dc;
 }
 
 .team {
@@ -95,40 +106,90 @@
 .team__item {
   margin: 15px;
   position: relative;
+  
+}
+
+
+
+
+
+
+
+
+
+
+.item-team__flipcard {
+  position: relative;
+  width: 270px;
+  height: 270px;
+  margin-bottom: 20px;
+  transition: transform 1200ms;
+  transform-style: preserve-3d;
 }
 
 .item-team__flipcard-face {
-  width: 270px;
-  height: 270px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   background: url("./img/elena.png") no-repeat;
+  transition: opacity 1200ms;
+  backface-visibility: hidden;
 }
-
-
 
 .item-team__flipcard-blue {
-  
-  width: 270px;
-  height: 270px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   left: 0px;
   top: 0px;
+  display: flex;
   background: #18b5dc;
-  
+  justify-content: center;
+  align-items: center;
+  transform: rotateY(180deg);
+  backface-visibility: hidden;
+  border: none;
 }
 
-.item-team__flipcard-blue-w-icons{
-    display: flex;
-    justify-content: space-between;
-    width: 50%;
-    margin: auto;
+.flipcard-blue__icon {
+  display: block;
+  height: 22px;
+  width: 22px;
+  background-color: #5dcbe6;
+  padding: 11px;
+  margin: 4px;
 }
 
-.item-team__hover-card-w-icons > img {
-  color: white;
+.item-team__flipcard-blue path {
+  fill: white;
 }
 
-.item-team__photo-1:hover + .item-team__hover-card-w-icons {
-  visibility: visible;
+
+.team__item:hover .item-team__flipcard {
+  transform: rotateY(180deg);
 }
+
+.team__item:hover .item-team__flipcard-face{
+    opacity: 0%;
+}
+
+
+.flipcard-blue__icon:hover, .flipcard-blue__icon>svg:hover {
+  background-color: white;
+  cursor: pointer;
+}
+
+.flipcard-blue__icon:hover path {
+  fill: #18b5dc;
+}
+
+
+
+
+
+
+
+
 
 .footer {
   display: flex;
@@ -144,28 +205,29 @@
   padding: 40px;
 }
 
-.footer__social-items{
-    border: 1px solid #18b5dc;
-    display: block;
-    height: 42px;
-    width: 42px;
+.footer__social-items {
+  border: 1px solid #18b5dc;
+  display: block;
+  height: 42px;
+  width: 42px;
 }
 
-.footer__logo{
-    margin-bottom: 25px;
+.footer__logo {
+  margin-bottom: 25px;
 }
 
-.footer__social-items>svg{
-    display: block;
-    height: 20px;
-    margin: auto;
-    padding: 10px 0px;
+.footer__social-items > svg {
+  display: block;
+  height: 20px;
+  margin: auto;
+  padding: 10px 0px;
 }
 
-.footer__social-items:hover path{
-    fill: white;
+.footer__social-items:hover path {
+  fill: white;
 }
 
-.footer__social-items:hover{
-    background-color: #18b5dc;
+.footer__social-items:hover {
+  background-color: #18b5dc;
+  cursor: pointer;
 }
